force-app/main/default/objects/Opportunity/fields/Portal_Possession_Survey_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Possession_Survey_Link_Id__c</fullName>
    <label>Portal Possession Survey Link Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>