force-app/main/default/objects/Opportunity/fields/Possession_Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Possession_Feedback_Link__c</fullName>
    <label>Possession Feedback Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>