force-app/main/default/objects/Opportunity/fields/Possession_NOC_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>Possession_NOC_by_Finance__c</fullName>
    <label>Possession NOC by Finance</label>
    <type>Date</type>
</CustomField>