force-app/main/default/objects/Opportunity/fields/Pre_Book_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Pre_Book_Ageing__c</fullName>
    <formula>IF(
ISBLANK(Booking__r.Id),
TODAY() - Blocked_Date__c,
DATEVALUE(Booking__r.CreatedDate) - Blocked_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days passed between booking &amp; blocking</inlineHelpText>
    <label>Pre-Book Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>