force-app/main/default/objects/Opportunity/fields/Presales_Call_Follow_Up_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Presales_Call_Follow_Up_Ageing__c</fullName>
    <formula>Next_Action_Date__c -  Last_Call_Attempt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Call Follow Up Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>