force-app/main/default/objects/Opportunity/fields/Previous_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opportunity_Stage__c</fullName>
    <label>Previous Opportunity Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>