force-app/main/default/objects/Opportunity/fields/Project_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_formula__c</fullName>
    <formula>RW_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>