force-app/main/default/objects/Opportunity/fields/Property_Comparison_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Property_Comparison_Amenities__c</fullName>
    <label>Property Comparison Amenities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better</fullName>
            </value>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Lesser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>