force-app/main/default/objects/Opportunity/fields/Rating_image_formula__c.field-meta.xml
<CustomField>
    <fullName>Rating_image_formula__c</fullName>
    <description>This is System Generated Rating.</description>
    <formula>CASE(
    Rating_system__c,
    &quot;Hot&quot;, IMAGE(&quot;/resource/HotRating&quot;, &quot;Hot Rating&quot;, 30, 80),
    &quot;Warm&quot;, IMAGE(&quot;/resource/WarmRating&quot;, &quot;Warm Rating&quot;, 30, 80),
    &quot;Cold&quot;, IMAGE(&quot;/resource/coldRating&quot;, &quot;Cold Rating&quot;, 30, 80),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>