force-app/main/default/objects/Opportunity/fields/Reason_for_Disqualification__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disqualification__c</fullName>
    <label>Reason for Disqualification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Concern</fullName>
            </value>
            <value>
                <fullName>Configuration Concern</fullName>
            </value>
            <value>
                <fullName>Possession Timeline Concern</fullName>
            </value>
            <value>
                <fullName>Willing to purchase within Cooling Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>