force-app/main/default/objects/Opportunity/fields/Reason_To_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Purchase__c</fullName>
    <label>Reason To Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Self Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>