force-app/main/default/objects/Opportunity/fields/Reassignment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_DateTime__c</fullName>
    <label>Reassignment DateTime</label>
    <type>DateTime</type>
</CustomField>