force-app/main/default/objects/Opportunity/fields/Referral_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Referral_Incentive__c</fullName>
    <label>Referral Incentive %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>