force-app/main/default/objects/Opportunity/fields/Referral_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sub_Source__c</fullName>
    <label>Walkin Referral Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Walkin_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Employee reference</fullName>
            </value>
            <value>
                <fullName>Existing client reference</fullName>
            </value>
            <value>
                <fullName>Management reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>