force-app/main/default/objects/Opportunity/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <formula>TEXT(Account.Religion__c)</formula>
    <label>Religion</label>
    <type>Text</type>
</CustomField>