force-app/main/default/objects/Opportunity/fields/Repeat_Site_Visit_Score__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Site_Visit_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repeat Site Visit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>