force-app/main/default/objects/Opportunity/fields/Reported_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Reported_Agreement_Value__c</fullName>
    <label>Reported Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>