force-app/main/default/objects/Opportunity/fields/Reported_Booking_date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Booking_date__c</fullName>
    <label>Reported Booking Date</label>
    <type>Date</type>
</CustomField>