force-app/main/default/objects/Opportunity/fields/Reported_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Reported_Booking_Status__c</fullName>
    <label>Reported Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>