force-app/main/default/objects/Opportunity/fields/Reported_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Cancellation_Date__c</fullName>
    <label>Reported Cancellation Date</label>
    <type>Date</type>
</CustomField>