force-app/main/default/objects/Opportunity/fields/Retention_Presales_User__c.field-meta.xml
<CustomField>
    <fullName>Retention_Presales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retention Presales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>