force-app/main/default/objects/Opportunity/fields/RW_19_99_Received__c.field-meta.xml
<CustomField>
    <fullName>RW_19_99_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>19.99 % Received</label>
    <type>Checkbox</type>
</CustomField>