force-app/main/default/objects/Opportunity/fields/RW_AADHAR_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_AADHAR_Card_Number__c</fullName>
    <label>AADHAR Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>