force-app/main/default/objects/Opportunity/fields/RW_AADHAR_Card_Received__c.field-meta.xml
<CustomField>
    <fullName>RW_AADHAR_Card_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AADHAR Card Received</label>
    <type>Checkbox</type>
</CustomField>