force-app/main/default/objects/Opportunity/fields/RW_Additional_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Additional_Contact_No__c</fullName>
    <label>Additional Contact No.</label>
    <type>TextArea</type>
</CustomField>