force-app/main/default/objects/Opportunity/fields/RW_Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Additional_Email__c</fullName>
    <label>Additional Email</label>
    <type>TextArea</type>
</CustomField>