force-app/main/default/objects/Opportunity/fields/RW_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_Value__c</fullName>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>