force-app/main/default/objects/Opportunity/fields/RW_Any_Other_Vaastu__c.field-meta.xml
<CustomField>
    <fullName>RW_Any_Other_Vaastu__c</fullName>
    <label>Any Other Vaastu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>