force-app/main/default/objects/Opportunity/fields/RW_Applicant_Ledger_Generated__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant_Ledger_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Ledger Generated</label>
    <type>Checkbox</type>
</CustomField>