force-app/main/default/objects/Opportunity/fields/RW_Apply_Unregistered_Broker__c.field-meta.xml
<CustomField>
    <fullName>RW_Apply_Unregistered_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Unregistered Channel Partner</label>
    <type>Checkbox</type>
</CustomField>