force-app/main/default/objects/Opportunity/fields/RW_Bank_Loan_Sanction_Letter_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RW_Bank_Loan_Sanction_Letter_Submitted__c</fullName>
    <label>Bank Loan Sanction Letter	Submitted</label>
    <type>DateTime</type>
</CustomField>