force-app/main/default/objects/Opportunity/fields/RW_Booking_Date_Opp__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking_Date_Opp__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>