force-app/main/default/objects/Opportunity/fields/RW_Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking_Source__c</fullName>
    <label>Booking Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>