force-app/main/default/objects/Opportunity/fields/RW_CIF_form_number__c.field-meta.xml
<CustomField>
    <fullName>RW_CIF_form_number__c</fullName>
    <label>CIF form number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>