force-app/main/default/objects/Opportunity/fields/RW_Closing_Head__c.field-meta.xml
<CustomField>
    <fullName>RW_Closing_Head__c</fullName>
    <label>Closing Head</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Adrian Dsouza</fullName>
            </value>
            <value>
                <fullName>Ahmed Khan</fullName>
            </value>
            <value>
                <fullName>Amit Samgiskar</fullName>
            </value>
            <value>
                <fullName>Anuj Sabhlok</fullName>
            </value>
            <value>
                <fullName>Asha Hiranandani</fullName>
            </value>
            <value>
                <fullName>Ayan Bose</fullName>
            </value>
            <value>
                <fullName>Bhavik Boricha</fullName>
            </value>
            <value>
                <fullName>Chetan Pathare</fullName>
            </value>
            <value>
                <fullName>Deepak Bhatt</fullName>
            </value>
            <value>
                <fullName>Deepika Nainani</fullName>
            </value>
            <value>
                <fullName>Dhiren Goswami</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>Jayesh Bandi</fullName>
            </value>
            <value>
                <fullName>Jovita Abreo</fullName>
            </value>
            <value>
                <fullName>Kamal Anand</fullName>
            </value>
            <value>
                <fullName>Karthik Chettiar</fullName>
            </value>
            <value>
                <fullName>Khushal Jain</fullName>
            </value>
            <value>
                <fullName>Lucy Roychoudhary</fullName>
            </value>
            <value>
                <fullName>Mahavir Kataria</fullName>
            </value>
            <value>
                <fullName>Mayank Rai</fullName>
            </value>
            <value>
                <fullName>Mohit Gista</fullName>
            </value>
            <value>
                <fullName>Mukul Pahuja</fullName>
            </value>
            <value>
                <fullName>Nandkishor Narkar</fullName>
            </value>
            <value>
                <fullName>Nidhi Jaiswal</fullName>
            </value>
            <value>
                <fullName>Ninad Gade</fullName>
            </value>
            <value>
                <fullName>Nityanand Krishnan</fullName>
            </value>
            <value>
                <fullName>Oberoy Pinto</fullName>
            </value>
            <value>
                <fullName>Payal Kumari</fullName>
            </value>
            <value>
                <fullName>Pooja Singh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>