force-app/main/default/objects/Opportunity/fields/RW_Co_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Co_Owner_Name__c</fullName>
    <label>Co-Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>