force-app/main/default/objects/Opportunity/fields/RW_Customer_Applied_for_Applicant_Ledger__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_Applied_for_Applicant_Ledger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Applied for Applicant Ledger</label>
    <type>Checkbox</type>
</CustomField>