force-app/main/default/objects/Opportunity/fields/RW_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>