force-app/main/default/objects/Opportunity/fields/RW_Employee_Reference__c.field-meta.xml
<CustomField>
    <fullName>RW_Employee_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Reference</label>
    <referenceTo>RW_Employee__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>