force-app/main/default/objects/Opportunity/fields/RW_Facing__c.field-meta.xml
<CustomField>
    <fullName>RW_Facing__c</fullName>
    <label>Facing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garden Facing</fullName>
            </value>
            <value>
                <fullName>Bay/Sea Facing</fullName>
            </value>
            <value>
                <fullName>City Facing</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>