force-app/main/default/objects/Opportunity/fields/RW_Floor_Choices__c.field-meta.xml
<CustomField>
    <fullName>RW_Floor_Choices__c</fullName>
    <label>Floor Choices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-15</fullName>
            </value>
            <value>
                <fullName>16-20</fullName>
            </value>
            <value>
                <fullName>21-25</fullName>
            </value>
            <value>
                <fullName>26-30</fullName>
            </value>
            <value>
                <fullName>31-35</fullName>
            </value>
            <value>
                <fullName>36-40</fullName>
            </value>
            <value>
                <fullName>41-45</fullName>
            </value>
            <value>
                <fullName>46-50</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>