force-app/main/default/objects/Opportunity/fields/RW_Form_16B_TDS_Certificate_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RW_Form_16B_TDS_Certificate_Submitted__c</fullName>
    <label>Form 16B(TDS Certificate) Submitted</label>
    <type>DateTime</type>
</CustomField>